# babs

./: .codecov.yml  .codespellrc  .gitattributes  .gitignore  .jscpd-report.md  .readthedocs.yaml  AGENTS.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  DockerfileSLURM  Dockerfile_testing  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  environment_hpc.yml  pyproject.toml  requirements-devel.txt  setup.cfg  setup.py  tox.ini  versioneer.py
.circleci/: config.yml  get_data.sh  run_rawBIDS.sh  run_rawBIDS_multises.sh
.github/: release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: codecov.yaml  codespell.yml  e2e-slurm.yml  ruff.yml  shellcheck.yml
babs/: __init__.py  _version.py  babs.py  base.py  bootstrap.py  check_setup.py  cli.py  constants.py  container.py  core_functions.py  dataset.py  datasets.py  dict_cluster_systems.yaml  generate_bidsapp_runscript.py  generate_submit_script.py  generation.py  hooks.py  input_dataset.py  input_datasets.py  interaction.py  merge.py  merge_outputs_postscript.sh  scheduler.py  status.py  system.py  template_test_job.py  update.py  utils.py
babs/bids_skeletons/: multi_ses_qsiprep.yaml  no_ses_qsiprep.yaml
babs/templates/: babs_proj_config.yaml.jinja2  bidsapp_pipeline_run.sh.jinja2  bidsapp_run.sh.jinja2  datalad_run.sh.jinja2  determine_zipfilename.sh.jinja2  filter_file.sh.jinja2  job_status_report.jinja  job_submit.yaml.jinja2  participant_job.sh.jinja2  test_array_job.sh.jinja2  test_job.sh.jinja2  unzip_inputds.sh.jinja2  zip_outputs.sh.jinja2  zipping.sh.jinja2
babs/templates/hooks/: zip.sh  zip.sh.jinja2
babs/tests/: conftest.py  test_babs_init.py  test_generate_bidsapp_runscript.py  test_generate_submit_script.py  test_system.py
babs/tests/e2e-slurm/container/: simbids-walkthrough-tests.sh  simbids_fmriprep-24-1-1_anatonly.yaml  sleep_array.sh  walkthrough-tests.sh
design/: containers-run.md  status-without-pandas.md
docker/: babs-input-overlay-helper.def  environment.yml
docs/: Makefile  after_jobs.rst  babs-check-setup.rst  babs-init.rst  babs-merge.rst  babs-status.rst  babs-submit.rst  babs-sync-code.rst  babs-update-input-data.rst  babs.rst  cli.rst  conf.py  create_babs_project.rst  developer.rst  developer_babs_status.rst  developer_config_yaml_file.rst  developer_how_to_test.rst  index.rst  installation.rst  jobs.rst  modules.rst  overview.rst  preparation.rst  preparation_config_yaml_file.rst  preparation_container.rst  preparation_input_dataset.rst  walkthrough.rst  walkthrough_babs-check-setup_printed_messages.txt  walkthrough_babs-init_printed_messages.txt  whats_new.md
docs/source/: README.rst  after_jobs.rst  babs-check-setup.rst  babs-init.rst  babs-merge.rst  babs-status.rst  babs-submit.rst  babs-unzip.rst  cli.rst  conf.py  create_babs_project.rst  developer.rst  developer_babs_status.rst  developer_how_to_test.rst  index.rst  installation.rst  jobs.rst  links.rst  overview.rst  preparation.rst  preparation_config_yaml_file.rst  preparation_container.rst  preparation_input_dataset.rst  walkthrough.rst  walkthrough_babs-check-setup_printed_messages.txt  walkthrough_babs-init_printed_messages.txt  walkthrough_babs-merge_printed_messages.txt
docs/source/_static/: style.css
docs/source/_templates/: layout.html
notebooks/: README.md  README_howtorun_show_babs_init_ipynb.md  bidsapp-toybidsapp-0-0-7_task-rawBIDS_system-slurm_cluster-MSI_egConfig.yaml  debug_functions.py  design_input_ds_argument.md  docs_developer.md  docs_prepare_inputs.md  docs_run_jobs.md  eg_aslprep-0-7-1.yaml  eg_aslprep-0-7-5.yaml  eg_fmriprep-20-2-3_anatonly.yaml  eg_fmriprep-20-2-3_anatonly_sge_cubic.yaml  eg_fmriprep-20-2-3_ingressed-fs-sloppy_sge_cubic.yaml  eg_fmriprep-20-2-3_ingressed-fs.yaml  eg_fmriprep-20-2-3_ingressed-fs_sge_cubic.yaml  eg_fmriprep-20-2-3_regular.yaml  eg_fmriprep-20-2-3_sloppy-no-fs_sge_cubic.yaml  eg_fmriprep-20-2-3_sloppy_sge_cubic.yaml  eg_fmriprep-20-2-3_sloppy_slurm_msi.yaml  eg_fmriprep-23-1-3_anatonly.yaml  eg_fmriprep-23-1-3_anatonly_sge_cubic.yaml  eg_fmriprep-23-1-3_anatonly_slurm_msi.yaml  eg_fmriprep-23-1-3_ingressed-fs-sloppy_sge_cubic.yaml  eg_fmriprep-23-1-3_ingressed-fs-sloppy_slurm_msi.yaml  eg_fmriprep-23-1-3_ingressed-fs.yaml  eg_fmriprep-23-1-3_ingressed-fs_slurm_msi.yaml  eg_fmriprep-23-1-3_regular.yaml  eg_fmriprep-23-1-3_sloppy_sge_cubic.yaml  eg_fmriprep-24-1-1_anatonly.yaml  eg_fmriprep-24-1-1_ingressed-fs.yaml  eg_fmriprep-24-1-1_regular.yaml  eg_fmriprepfake-0-1-2_anatonly_slurm_msi.yaml  eg_fmriprepfake-0-1-2_full_slurm_msi.yaml  eg_fmriprepfake-0-1-2_legacy-layout_slurm_msi.yaml  eg_fmriprepfake-unstable_full_slurm_msi.yaml  eg_freesurferpost-0-1-2_bids-study-layout.yaml  eg_freesurferpost-unstable_ingressed-fs.yaml  eg_mriqc-24-0-2.yaml  eg_nordic-fmriprep_pipeline.yaml  eg_qsiprep-0-16-0RC3_sloppy_sge_cubic.yaml  (+58 more)
tests/: conftest.py  donttest_babs_init.py  download_datasets.py  e2e_in_docker.sh  get_data.py  origin_input_dataset.yaml  pytest_in_docker.sh  someday_test_template_generation.py  test_babs_check_setup.py  test_babs_init.py  test_babs_workflow.py  test_base.py  test_check_base.py  test_check_setup.py  test_generate.py  test_generate_bidsapp_runscript.py  test_generate_submit_script.py  test_hooks.py  test_input_datasets.py  test_interaction.py  test_merge.py  test_slurm.py  test_status.py  test_system.py  test_template_generation.py  test_template_job.py  test_update.py  test_update_input_data.py  test_utils.py
tests/e2e-slurm/: install-babs.sh  main.sh
tests/e2e-slurm/container/: babs-user-script.sh  config_simbids.yaml  config_simbids_multiinput.yaml  config_simbids_no_zip.yaml  config_simbids_zip.yaml  config_toybidsapp.yaml  ensure-env.sh  rerun.sh  simbids_fmriprep-24-1-1_anatonly.yaml  walkthrough-tests.sh
