[build-system]
# "versioneer-518" is needed to use both versioneer and `pyproject.toml`:
requires = ["setuptools", "wheel", "versioneer-518"]
build-backend = "setuptools.build_meta"

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.8
target-version = "py38"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E", "F", "W", "I", "UP", "S", "B", "T20", "RUF"]
ignore = [
    "S101",  # Use of assert detected
    "B905",  # `zip()` without an explicit `strict=` parameter
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Isort settings
[tool.ruff.lint.isort]
known-first-party = ["babs"]
known-third-party = ["datalad", "pandas", "yaml"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder"
]
combine-as-imports = true
split-on-trailing-comma = true
