[build-system]
# "versioneer-518" is needed to use both versioneer and `pyproject.toml`:
requires = ["setuptools", "wheel", "versioneer-518"]
build-backend = "setuptools.build_meta"

[tool.ruff]
# Same as Black.
line-length = 99
indent-width = 4

# Assume Python 3.8
target-version = "py38"

[tool.ruff.lint]
extend-select = [
  "F",
  "E",
  "W",
  "I",
  "UP",
  "YTT",
  "S",
  "BLE",
  "B",
  "A",
  # "CPY",
  "C4",
  "DTZ",
  "T10",
  # "EM",
  "EXE",
  "FA",
  "ISC",
  "ICN",
  "PT",
  "Q",
]
ignore = [
  "S101",  # Ignore use of assert for now
  "S105",
  "S311",  # We are not using random for cryptographic purposes
  "ISC001",
  "S603",
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

# [tool.ruff.lint.extend-per-file-ignores]
# "*/test_*.py" = ["S101"]
# "xcp_d/utils/debug.py" = ["A002", "T100"]
# "docs/conf.py" = ["A001"]
# "docs/sphinxext/github_link.py" = ["BLE001"]

[tool.ruff.format]
quote-style = "single"

# Isort settings
[tool.ruff.lint.isort]
known-first-party = ["babs"]
known-third-party = ["datalad", "pandas", "yaml"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder"
]
combine-as-imports = true
split-on-trailing-comma = true
