[versioneer]
VCS = git
style = pep440
versionfile_source = babs/_version.py
versionfile_build = babs/_version.py
tag_prefix =
parentdir_prefix =


[metadata]
url = https://github.com/PennLINC/babs
author = The PennLINC developers
author_email = chenyzh@seas.upenn.edu
maintainer = Chenying Zhao, Sydney Covitz, Matt Cieslak
maintainer_email = chenyzh@seas.upenn.edu
description = BABS (python): BIDS App BootStrap for DataLad-based, FAIRly big workflow of BIDS Apps
license = 3-clause BSD
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
python_requires = >=3.5
install_requires =
    nibabel >=2.2.1
    numpy >=1.13.3
    pandas
    tqdm
    pyyaml >= 6.0
    #ruamel.yaml >= 0.17.21
    datalad >= 0.17.2
    datalad_container >= 1.1.6
    regex
    filelock >= 3.8.0
    qstat >= 0.0.5
test_requires =
    pytest
packages = find:
include_package_data = True

[options.exclude_package_data]
* = tests

[options.entry_points]
console_scripts =
    babs-init=babs.cli:babs_init_cli

[flake8]
ignore = E226,E302,E41,E731,E123,W503
max-line-length = 99
doctests = True
exclude=*build/
putty-ignore =
    */__init__.py : +F401
    /^\s*\.\. _.*?: http/ : +E501
