[versioneer]
VCS = git
style = pep440
versionfile_source = babs/_version.py
versionfile_build = babs/_version.py
tag_prefix =
parentdir_prefix =


[metadata]
url = https://github.com/PennLINC/babs
author = The PennLINC developers, Senseable Intelligence Group (MIT) developers, and collaborators
author_email = Matthew.Cieslak@pennmedicine.upenn.edu
maintainer = The PennLINC developers
maintainer_email = Matthew.Cieslak@pennmedicine.upenn.edu
description = BIDS App Bootstrap (BABS) is a reproducible, generalizable, and scalable Python package for BIDS App analysis of large datasets. It uses DataLad and adopts FAIRly big framework.
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
python_requires = >=3.7
install_requires =
    nibabel >=2.2.1
    numpy
    pandas
    tqdm
    pyyaml >= 6.0
    #ruamel.yaml >= 0.17.21
    datalad >= 0.17.2
    datalad_container >= 1.1.6
    regex
    filelock >= 3.8.0
    qstat >= 0.0.5
packages = find:
include_package_data = True

[options.exclude_package_data]
* = tests

[options.extras_require]
datalad = datalad
doc =
    sphinx == 5.3.0
    sphinx-argparse == 0.4.0
    recommonmark == 0.7.1
    jinja2<3.1.0    # to fix the issue re: jinja2
    docutils <0.17   # to fix the issue of bullet points not rendered
    sphinx_design   # for adding in-line badges etc
    sphinx_rtd_theme    # needed by readthedocs
tests =
    pytest
    pytest-xdist   # for running pytest in parallel
    pytest-order   # for ordering test execution
    datalad-osf

[options.entry_points]
console_scripts =
    babs-init=babs.cli:babs_init_main
    babs-check-setup=babs.cli:babs_check_setup_main
    babs-submit=babs.cli:babs_submit_main
    babs-status=babs.cli:babs_status_main
    babs-merge=babs.cli:babs_merge_main
    babs-unzip=babs.cli:babs_unzip_main

[flake8]
ignore = E226,E302,E41,E731,E123,W503
max-line-length = 99
doctests = True
exclude=*build/
putty-ignore =
    */__init__.py : +F401
    /^\s*\.\. _.*?: http/ : +E501
